# lwt

./: .env.example  .env.prod.example  .gitignore  build-push.sh  deploy.sh  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: ci.yml  rollback.yml
backend/: .env.example  Cargo.toml  Dockerfile
backend/migrations/: 20260504110000_add_language_favorite.sql  20260506000000_add_rls_policies.sql
backend/src/: auth.rs  error.rs  lib.rs  main.rs  router.rs  state.rs
backend/src/handlers/: examples.rs  languages.rs  mod.rs  reviews.rs  roles.rs  texts.rs  trivia.rs  words.rs
backend/src/models/: user.rs
backend/tests/: api_examples.rs  api_languages.rs  api_reviews.rs  api_texts.rs  api_trivia.rs  api_words.rs  smoke.rs
backend/tests/common/: mod.rs
design/: LWT App.html  app-data.js
frontend/: .env.example  .env.production  Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  pwa-assets.config.ts  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  sw.ts  vite-env.d.ts
supabase/: config.toml  seed.sql
supabase/migrations/: 20260504075709_init.sql  20260504083611_seed_languages.sql  20260505120000_add_word_unique_constraint.sql  20260507000000_add_text_content_type.sql  20260508090000_add_target_cefr_levels.sql  20260508091000_create_trivias_table.sql  20260508092000_add_trivias_rls.sql  20260508093000_seed_trivias.sql  20260508100000_add_user_roles.sql  20260517000000_add_fsrs_review_state.sql
supabase/rollback/: 20260504075709_init.sql  20260504083611_seed_languages.sql  20260504110000_add_language_favorite.sql  20260505120000_add_word_unique_constraint.sql  20260506000000_add_rls_policies.sql  (+6 more)
tokenizer/: Cargo.toml
tokenizer/src/: lib.rs
(+40 files in other folders)
