[package]
name = "lwt-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.7", features = ["cors", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8.6", features = [
  "runtime-tokio-native-tls",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["serde", "v4"] }
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
reqwest = { version = "0.13", features = ["json"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
fsrs = "6"

[dev-dependencies]
tokio-test = "0.4"
rsa = "0.9"
base64 = "0.22"
http-body-util = "0.1"
